--- a/documentation/pages/docs/designer/plugins.mdx
+++ b/documentation/pages/docs/designer/plugins.mdx
@@ -93,7 +93,7 @@ module.exports = plugins;
 
 How to use directives `Router.NEXT`, `Router.END`, `Router.CONTINUE` and `Router.BREAK`
 
-![wingbot plugin](./returns.png "Wingbot Chatbot Plugin")
+![wingbot plugin](../../../returns.png "Wingbot Chatbot Plugin")
 
 ## Plugin as a nested Router
 
