--- a/documentation/pages/docs/core/asyncActions.mdx
+++ b/documentation/pages/docs/core/asyncActions.mdx
@@ -1,3 +1,9 @@
+---
+title: Asynchronous actions # Title of your page
+section: UNDERSTANDING THE CORE # Sidebar navigation group title
+order: 10 # Order in the sidebar navigation group
+---
+
 # Asynchronous actions
 
 Processing a chat event from user blocks other event from same user until the processing is finnished. It's very important for choosing right approach.
