--- a/documentation/pages/docs/core/extendingProcessor.mdx
+++ b/documentation/pages/docs/core/extendingProcessor.mdx
@@ -1,4 +1,10 @@
-# Extenting the wingbot's abilities using Processor plugin
+---
+title: Extending the wingbot's abilities using Processor plugin # Title of your page
+section: UNDERSTANDING THE CORE # Sidebar navigation group title
+order: 9 # Order in the sidebar navigation group
+---
+
+# Extending the wingbot's abilities using Processor plugin
 
 To be able to:
 
