replaced | with or

--- a/documentation/pages/docs/orchestrator/chat.mdx
+++ b/documentation/pages/docs/orchestrator/chat.mdx
@@ -152,7 +152,7 @@ There are supported parameters for the config object:
 |`contextLangProp`|`null`|Context prop to store chat language|`'lang'`|
 |`contextPathProp`|`null`|Context prop to store window path|`'path'`|
 |`oauthMode`|`'iframe'`|Method for OAUTH authentication|`'xhr' | 'iframe' | 'redirect'`|
-|`homeAction`|`undefined`|If `homeAction` is `true\|string` home button will be enabled in the chat header. If `homeAction` is `string` home button sends a postback to `homeAction`. If `homeAction` is `true` home button sends a postback to `startAction` |`true`|
+|`homeAction`|`undefined`|If `homeAction` is `true` or `string` home button will be enabled in the chat header. If `homeAction` is `string` home button sends a postback to `homeAction`. If `homeAction` is `true` home button sends a postback to `startAction` |`true`|
 |`langFromUrl`|`undefined`|If `langFromUrl` is `true` language will be set based on url query parameter `lang`. If `langFromUrl` is `string` language will be set to `langFromUrl`|`true`|
 
 
