added jsx example

--- a/documentation/pages/docs/orchestrator/chat.mdx
+++ b/documentation/pages/docs/orchestrator/chat.mdx
@@ -170,6 +170,18 @@ list of animation frames with transitions
 - `animate` - name of transition effect from (animate.style)[https://animate.style]
 - `timeout` - time in ms (default: 2000)
 
+```jsx
+onlineAnimationSequence: [
+    {
+        i: (
+            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 11.5C0 5.14873 5.14873 0 11.5 0V0C17.8513 0 23 5.14873 23 11.5V23H11.5C5.14873 23 0 17.8513 0 11.5V11.5Z" fill="#1FFFB4" />
+            </svg>
+        )
+    }
+]
+```
+
 **Persistent menu**
 
 ```javascript
